cilium/overlays/production/resources/routeCiliumHubble.yaml
# https://gateway-api.sigs.k8s.io/api-types/httproute/
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cilium-hubble
spec:
  parentRefs:
    - name: hunt-internal-production-home
      namespace: gateway-api
      sectionName: https
  hostnames:
    - cilium.production.home.hunt.internal
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
